--- a/layouts/_default/add-dataset.html
+++ b/layouts/_default/add-dataset.html
@@ -252,13 +252,14 @@
                   <option value=""></option>
                   <option>Evaluation Set</option>
                   <option>Training Set</option>
+                  <option>Train + Eval</option>
                   <option>Benchmark</option>
                   <option>Other</option>
                 </select>
               </label>
               <label>
-                Task *
-                <span class="helper">Dataset / benchmark name</span>
+                Name *
+                <span class="helper">Dataset or benchmark name</span>
                 <input type="text" name="task" required />
               </label>
               <label>
